--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,49 @@ table {
 }
 
 /*Start Your Code From Here*/
+header {
+	width: 100%;
+	height: 65px;
+	background-color: rgba(34, 49, 52, 0.9);
+	color: white;
+	position: fixed;
+	top: 0;
+}
+
+.header-left {
+	float: left;
+}
+
+.logo {
+	width: 200px;
+	margin-top:-2px;
+}
+
+.header-right {
+	float: right;
+	line-height: 65px;
+	margin-right: 20px;
+}
+
+.navbar {
+	color: white;
+	text-decoration: none;
+	display: inline-block;
+	margin-left: 15px;
+	padding: 0 10px;
+	transition: all 1s;
+}
+
+.navbar:hover {
+	background-color: white;
+	opacity: 0.8;
+	color: black;
+}
+
+p {
+	margin-top: 10px;
+}
+
 
 
 
