--- a/css/style.css
+++ b/css/style.css
@@ -94,13 +94,46 @@ header span.menu-icon {
 
 .top-wrapper {
 	width: 100%;
-	height: 500px;
+	height: 550px;
 	background-image: url('/img/bg.jpg');
 	background-size: cover;
-	background-color: red;
 }
 
+.container {
+	padding-top: 230px;
+	padding-left: 50px;
+	color: white;
+}
 
+.container h1 {
+	font-size: 60px;
+	font-weight: bold;
+	text-shadow: 2px 2px 8px rgba(0,0,0,0.9);
+}
+
+.container p {
+	font-size: 30px;
+	width: 650px;
+	text-shadow: 2px 2px 8px rgba(0,0,0,0.9);
+}
+
+.content {
+	background-color: rgb(236, 236, 236);
+	padding-top: 40px;
+	padding-left: 50px;
+}
+
+article h1 {
+	font-weight: bold;
+	font-size: 20px;
+	margin-bottom: 15px;
+}
+
+article p {
+	font-size: 18px;
+	line-height: 30px;
+	width: 97%;
+}
 
 
 
