--- a/css/style copy.css
+++ b/css/style copy.css
@@ -95,7 +95,7 @@ header span.menu-icon {
 
 .top-wrapper {
 	width: 100%;
-	height:100vh;
+	height: 550px;
 	background-image: url(/My\ Blog/img/bg.jpg);
 	background-size: cover;
 }
@@ -166,36 +166,30 @@ article p {
 	opacity: 0.8;
 }
 
+.penulis {
+	margin-bottom: 25px;
+}
+
+footer {
+	width: 100%;
+	height: 50px;
+}
+
 .icon-wrapper {
-	float: right;
-	margin-top: 190px;
+	float: left;
+	margin-top: 15px;
 	margin-bottom: 15px;
-	margin-right: 50px;
+	margin-left: 50px;
+}
+
+.icon-wrapper p {
+	font-size: 15px;
 }
 
 .icon {
-	font-size: 25px;
-	color: white;
-	text-decoration: none;
+	font-size: 30px;
+	opacity: 0.8;
 }
-
-.copyright {
-	padding-top: 8px;
-	color:white;
-}
-
-.icon-wrapper .follow {
-	margin-bottom: 5px;
-	font-size: 17px;
-	color: white;
-	font-weight: bold;
-}
-
-
-
-
-
-
 
 .facebook {
 	color: #4267B2;
@@ -210,6 +204,12 @@ article p {
 	color: #1DA1F2;
 }
 
+.copyright {
+	float: right;
+	margin-top: 35px;
+	margin-bottom: 15px;
+	margin-right: 50px;
+}
 
 
 
